Bye Spigot!
Update checker is now async